--- a/main-1080.css
+++ b/main-1080.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700;800;900&display=swap');
 
 /* font-family: 'Open Sans', sans-serif;
 font-family: 'Roboto', sans-serif;
@@ -30,6 +30,7 @@ body{
     width: 184;
     height: 117px;
     z-index: 1;
+    opacity: 50%;
 }
 
 .lines{
@@ -39,6 +40,7 @@ body{
     width: 110%;
     height: 100%;
     z-index: 1;
+    opacity: 50%;
 }
 
 #lines_main{
@@ -63,6 +65,13 @@ body{
     position: absolute;
     right: 35px;
     bottom: 75px;
+    z-index: 1;
+}
+
+#circles_price{
+    position: absolute;
+    left: -37px;
+    top: 75px;
     z-index: 1;
 }
 
@@ -98,6 +107,13 @@ body{
     color: #fff;
     text-decoration: none;
     line-height: 100px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 24px;    
+}
+
+.menu_item_footer{
+    line-height: auto; !important
 }
 
 .menu_item:hover{
@@ -148,12 +164,16 @@ body{
     transition: .3s;
 }
 
-#advantages{
+#advantages, #review{
     position: relative;
     top: 0px;
     left: 0px;
     width: 100%;
     background-color: #fff;
+}
+
+#review{
+    min-height: 300px;
 }
 
 .block_header{
@@ -293,3 +313,200 @@ body{
     margin-bottom: 75px;
     margin-top: 40px;
 }
+
+
+/*SLIDER */
+
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+#block-for-slider {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 40px;
+}
+
+#viewport {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    text-align: center;
+}
+
+#slidewrapper {
+    position: relative;
+    width: calc(100% * 8);
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    -webkit-transition-timing-function: cubic-bezier(.67,.01,.23,1);
+    -o-transition-timing-function: cubic-bezier(.67,.01,.23,1);
+    transition-timing-function: cubic-bezier(.67,.01,.23,1);
+}
+
+#slidewrapper, #slidewrapper ul, #slidewrapper li {
+    margin: 0;
+    padding: 0;
+}
+
+.slide {
+    width: calc(100%/8);
+    list-style: none;
+    display: inline;
+    float: left;
+}
+
+.slide-img {
+    width: 100%;
+}
+
+#prev-btn, #next-btn {
+    position: absolute;
+    width: 50px;
+    height: 77px;
+    background-color: #fff;
+    top: 25%;
+}
+
+#prev-btn:hover, #next-btn:hover {
+    cursor: pointer;
+}
+
+#prev-btn {
+    left: 80px;
+    background: url('../img/left_arrow.png');
+}
+
+#next-btn {
+    right: 80px;
+    background: url('../img/right_arrow.png');
+}
+
+#partners_container{
+    position: relative;
+    top: 25px;
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+
+    padding-bottom: 50px;
+}
+/*END OF SLIDER */
+
+
+/* FOOTER */
+.footer{
+    position: relative;
+    bottom: 0;
+    left: 0;
+    background-color: #171927;
+    width: 100%;
+    height: 380px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    padding: 40px 0px;
+    color: #fff;
+}
+
+.menu_footer{
+    height: 100px;
+    display: flex;
+    flex-flow: column nowrap;
+    text-align: left;
+}
+
+.footer_center{
+    display: flex;
+    flex-flow: column nowrap;    
+}
+
+.footer_logo{
+    width: 313px;
+    margin-bottom: 35px;
+}
+
+.footer_logo_desc{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 24px;
+    margin-bottom: 45px;
+}
+
+
+.footer_form{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.input_text{
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    padding: 5px 20px;
+    border: none;
+    outline: none;
+    color: #575757;
+    font-size: 18px;
+    margin-right: 15px;
+}
+
+.footer_button{
+    width: 200px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: var(--main-orange);
+    color: #fff;
+    padding: 5px 20px;
+    line-height: 40px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.footer_info{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #fff;
+    text-align: right;
+    margin: auto 0;
+}
+
+.politics{
+    font-size: 14px;
+    color: rgb(151, 170, 173);
+}
+
+.footer_sub{
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.footer_sub > a{
+    text-decoration: none;
+    color: rgb(162, 221, 255);
+    padding-left: 25px;
+}
+/* end of FOOTER */
