--- a/price-1080.css
+++ b/price-1080.css
@@ -77,7 +77,9 @@
     position: relative;
     top: 0;
     width: 100%;
-    min-height: 1000px;
+    height: auto;
+    min-height: 800px;
+    z-index: 0;
 }
 
 .zayavka_header{
@@ -105,18 +107,27 @@
     max-width: 30%;
 }
 
-.zayavka_form{
+.zayavka_bg{
     position: absolute;
-    right: 0;
+    right: 0px;
     top: 0px;
     background: url("img/zayavka/form_bg.png") no-repeat left top;
-    background-size: 100% 100%;
+    background-size: cover;
     width: 60%;
-    height: 1000px;
+    height: 100%;
+    text-align: right;
+}
+
+.zayavka_form{
+    position: relative;
+    top: 0;  
+    right: 0;
+    max-width: 65%;     
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    z-index: 3;
 }
 
 .zayavka_title{
@@ -160,6 +171,55 @@
     box-shadow: 0px 7px 8px rgba(0, 0, 0, 0.25);
     cursor: pointer;
     margin-bottom: 70px;
+}
+
+
+.zayavka_description{
+    position: absolute;
+    bottom: 0px;
+    width: auto;
+    min-width: 40%;
+    height: 150px;
+    background-color: var(--main-blue);
+    box-shadow: 0px -8px 25px rgba(0, 0, 0, 0.25);
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 28px 28px 0px 0px;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 28px;
+    text-align: center;
+}
+
+.zayavka_description_sub_container{
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.zayavka_phone_number{
+    line-height: 54px;
+    color: #fff;
+    text-decoration: none;
+    border-bottom: 3px dashed #fff;
+}
+
+.zayavka_description_sub_phone{
+    margin-right: 25px;
+}
+
+.click-click{
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    z-index: 3;
 }
 /*end of zayavka
 
