--- a/price-1080.css
+++ b/price-1080.css
@@ -58,7 +58,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 18px;
-    color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);    
 }
 
 #price_sub > p{
@@ -119,10 +119,11 @@
 }
 
 .zayavka_form{
-    position: relative;
-    top: 0;  
-    right: 0;
-    max-width: 65%;     
+    position: absolute;
+    top: 0px;  
+    right: 50%;
+    transform: translateX(50%);
+    width: auto;  
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -188,7 +189,7 @@
     color: #fff;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 28px;
+    font-size: 22px;
     text-align: center;
 }
 
@@ -210,6 +211,19 @@
     text-decoration: none;
     border-bottom: 3px dashed #fff;
 }
+
+.zayavka_container_one{
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+@media screen and (min-width: 1100px) {
+    .zayavka_container_one {
+        flex-flow: column wrap;
+    }
+  } /*НЕ РАБОТАЕТ СУКА НИХУЯ БЛЯТЬ СУКА*/
 
 .zayavka_description_sub_phone{
     margin-right: 25px;
