--- a/contacts-1080.css
+++ b/contacts-1080.css
@@ -1,77 +1,3 @@
-#price_main{
-   position: relative; 
-   width: 100%;
-   background: linear-gradient(180deg, rgba(105, 183, 227, 0.78) 0%, rgba(201, 231, 203, 0) 100%);
-}
-
-.block_header_main{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 72px;
-    font-weight: 600;
-    color: rgb(255, 255, 255);
-    margin: 0 auto;
-    margin-bottom: 40px;
-    padding-top: 110px;
-    text-align: center;
-}
-
-#gazel_img{
-    width: 100%;
-
-}
-
-#price_blocks{
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-bottom: 50px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(242, 153, 74, 0.65) 100%);
-}
-
-#price_blocks_container{
-    width: 80%;
-    height: auto;
-    margin: 0 auto;
-    margin-top: 50px;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.price_block_arrow{
-    height: 90px;
-    width: 90px;  
-    margin: 30px;  
-    padding-top: 50px;
-}
-
-#price_sub{
-    position: relative;
-    top: 0;
-    margin: 75px auto 0px auto;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: rgb(0, 0, 0);    
-}
-
-#price_sub > p{
-    font-weight: 400;
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    line-break: normal;
-    line-height: 200%;
-    font-size: 24px;
-}
-
-
 /*zayavka here */
 #zayavka{
     position: relative;
@@ -234,4 +160,64 @@
     top: 20px;
     right: 15px;
     z-index: 3;
+}
+/*end of zayavka*/
+
+
+
+.contacts_main{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(106.56deg, #E8917E 3.43%, #F2C367 100.04%);
+}
+
+.contacts_main_block{
+    padding-top:50px;
+    width: 80vw;
+    height: 80vh;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 35px;
+    border: inset 5px solid #fff;
+}
+
+.adress_block{
+    position: absolute;
+    background-color: #0000008c;
+    left: 70px;
+    top: 85px;
+    z-index: 5;
+    border-radius: 15px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 64px;
+    font-weight: 700;
+    color: #fff;
+    padding: 10px 25px;
+}
+
+.links_block{
+    position: absolute;
+    background-color: #8080808c;
+    margin-top:50px;
+    right: 0px;
+    top: 0px;
+    height: calc(100% - 50px);
+    width: 18%;
+    z-index: 5;
+    border-radius: 0px 36px 36px 0px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 64px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.links_flex{
+    position: absolute;
+    width: 150px;
+    height: 500px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
