--- a/uslugi-1080.css
+++ b/uslugi-1080.css
@@ -33,7 +33,138 @@
 #uslugi_gazel{
     position: relative;
     top: 0px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
     height: 100vh;
     background-color: var(--main-blue);
+}
+
+#gazel_text_container{
+    text-align: right;
+}
+
+#gazel_h1{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 72px;
+    color: var(--main-orange);
+}
+
+#gazel_main{
+    width: 80%;
+    position: absolute;
+    top:115px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+#gazel_main_img{
+    width: 677px;
+    height: 488px;
+    border-radius: 40px;
+}
+
+#gazel_h2{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 48px;
+    color: #da881e;
+}
+
+#gazel_h3{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: rgb(100, 100, 100);
+}
+
+.uslugi_list_1{
+    position: absolute;
+    left: 35px;
+    top: 160px;
+    z-index: 4;
+}
+
+.uslugi_list_2{
+    position: absolute;
+    left: 35px;
+    top: 500px;
+    z-index: 4;
+}
+
+.uslugi_list_h3{
+    position: relative;
+    top: 0;
+    left: 0;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: #000;
+}
+
+.uslugi_flex{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.uslugi_card{
+    width: 196px;
+    height: 196px;
+    padding: 8px;
+    text-align: left;
+    margin-right: 30px;
+}
+
+.uslugi_card_p{
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+    height: 180px;
+    padding-left: 10px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    color: rgb(255, 255, 255);
+    word-wrap: break-word;
+}
+
+#card_1{    
+    background: url("img/uslugi/card1.png") no-repeat left center;
+    background-size: contain;
+}
+
+#card_2{    
+    background: url("img/uslugi/card2.png") no-repeat left center;
+    background-size: contain;
+}
+
+#card_3{    
+    background: url("img/uslugi/card3.png") no-repeat left center;
+    background-size: contain;
+}
+
+#card_4{    
+    background: url("img/uslugi/card4.png") no-repeat left center;
+    background-size: contain;
+}
+
+#card_5{    
+    background: url("img/uslugi/card5.png") no-repeat left center;
+    background-size: contain;
+}
+
+#card_6{    
+    background: url("img/uslugi/card6.png") no-repeat left center;
+    background-size: contain;
+}
+
+#card_7{    
+    background: url("img/uslugi/card7.png") no-repeat left center;
+    background-size: contain;
 }
