--- a/about-1080.css
+++ b/about-1080.css
@@ -37,25 +37,54 @@
     top: 140px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    color: #df960e;
+    color: #F2994A;
     font-size: 64px;
 }
 
+#about-video-h1{
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #F2994A;
+    font-size: 64px;
+}
+
+.h1_right{
+    text-align: right;
+}
+
 #about-main-h2{
+    width: 660px;
     position: relative;
     top: 170px;
     left: 84px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     color: #7e5304;
-    font-size: 56px;
+    font-size: 36px;
+    text-align: left;
+}
+
+#lines_about{
+    width: 100%;
+    height: 80%;
+}
+
+#about-main-h2-right{
+    width: 660px;
+    position: relative;
+    top: 50px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #7e5304;
+    font-size: 36px;
+    text-align: right;
 }
 
 .slider-container{
     position: absolute;
     right: 10px;
     top: 120px;
-    height: 420px;
     width: 60%;
 }
 
@@ -115,6 +144,7 @@
     height: 77px;
     background-color: #fff;
     top: 50%;
+    transform: translateY(-50%);
 }
 
 #prev-btn:hover, #next-btn:hover {
@@ -122,12 +152,12 @@
 }
 
 #prev-btn {
-    background: url('../img/left_arrow_btn.png'); 
+    background: url('/img/left_arrow_btn.png'); 
     height: 72px;   
 }
 
 #next-btn {
-    background: url('../img/right_arrow_btn.png');
+    background: url('/img/right_arrow_btn.png');
 }
 
 #partners_container{
@@ -192,6 +222,10 @@
     word-wrap: break-word;
     text-align: center;
     padding: 0px 15px;
+}
+
+#h1-container-video{
+    padding: 50px;
 }
 
 .squad-card-h1{
