--- a/contacts-1080.css
+++ b/contacts-1080.css
@@ -106,8 +106,8 @@
     bottom: 0px;
     width: auto;
     min-width: 605px;
-    height: 150px;
-    background-color: var(--main-blue);
+    height: 130px;
+    background-color: #9dd0ece0;
     box-shadow: 0px -8px 25px rgba(0, 0, 0, 0.25);
     left: 50%;
     transform: translateX(-50%);
@@ -117,6 +117,7 @@
     font-weight: 600;
     font-size: 22px;
     text-align: center;
+    padding-top: 18px;
 }
 
 .zayavka_description_sub_container{
