--- a/uslugi-1080.css
+++ b/uslugi-1080.css
@@ -18,26 +18,24 @@
     font-weight: 700;
     font-size: 64px;
     color: #fff;
+    width: 80%;
 }
 
 .main_usligu_h2{
-    position: absolute;
-    top: 372px;
-    right: 185px;
+    position: relative;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 36px;
     color: #F9D8A7;
+    top:40px;
 }   
 
 #uslugi_gazel{
     position: relative;
     top: 0px;
-    left: 50%;
-    transform: translateX(-50%);
     width: 100%;
-    height: 100vh;
-    background-color: var(--main-blue);
+    height: 650px;
+    background-color: #323233;
 }
 
 #gazel_text_container{
@@ -48,15 +46,15 @@
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 72px;
-    color: var(--main-orange);
+    color: #cf8018;  /*color should be changed*/
 }
 
 #gazel_main{
-    width: 80%;
-    position: absolute;
-    top:115px;
+    width: 70%;
+    position: relative;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -72,38 +70,46 @@
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
     font-size: 48px;
-    color: #da881e;
+    color: #92d881;
 }
 
 #gazel_h3{
     font-family: "Montserrat", sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 36px;
-    color: rgb(100, 100, 100);
+    color: #92d881;
+}
+
+#gazel_h4{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    color: rgb(131, 131, 131);
 }
 
 .uslugi_list_1{
     position: absolute;
     left: 35px;
-    top: 160px;
+    top: 200px;
     z-index: 4;
 }
 
 .uslugi_list_2{
     position: absolute;
     left: 35px;
-    top: 500px;
+    top: 560px;
     z-index: 4;
 }
 
 .uslugi_list_h3{
     position: relative;
     top: 0;
-    left: 0;
+    left: 8px;
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
-    font-size: 36px;
-    color: #000;
+    font-size: 48px;
+    color: rgb(49, 49, 49);
+    margin-bottom: 40px;
 }
 
 .uslugi_flex{
