--- a/main-1080.css
+++ b/main-1080.css
@@ -132,6 +132,13 @@ body{
     filter: brightness(40%);
 }
 
+#screen_img{
+    display: none;
+    background: url("img/video.png") no-repeat center center;
+    height: 100vh;
+    filter: brightness(60%);
+}
+
 #screen_header{
     position: absolute;
     top: 45%;
@@ -240,6 +247,7 @@ body{
 }
 
 #advantages2{
+    width: 100%;
     position: relative;
     top: -15px;
     left: 0px;
@@ -254,14 +262,10 @@ body{
 
 #adv_container{
     width: 80%;
+    max-width: 1650px;
     margin: 0 auto;
     display: flex;
-    flex-flow: column nowrap;
-}
-
-#adv_container2{
-    display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     align-content: center;
@@ -270,6 +274,7 @@ body{
 .adv_block{
     position: relative;
     width: 300px;
+    min-width: 300px;
     height: 350px;
     background-color: #fff;
     border-radius: 18px;
