--- a/about-1080.css
+++ b/about-1080.css
@@ -10,6 +10,13 @@
     height: 700px;
 }
 
+.video-container{    
+    width: auto;
+    min-width: 40%;
+    height: 250px;
+    border-radius: 50px;
+}
+
 .about-main-bg{
     position: absolute;
     right: 0px;
@@ -33,7 +40,7 @@
 
 #about-main-h1{
     position: relative;
-    left: 84px;
+    left: 54px;
     top: 140px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -43,6 +50,8 @@
 
 #about-video-h1{
     position: relative;
+    right: 0px;
+    max-width: 90%;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     color: #F2994A;
@@ -54,10 +63,10 @@
 }
 
 #about-main-h2{
-    width: 660px;
+    width: 90%;
     position: relative;
-    top: 170px;
-    left: 84px;
+    top: 120px;
+    left: 54px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     color: #7e5304;
@@ -71,14 +80,16 @@
 }
 
 #about-main-h2-right{
-    width: 660px;
     position: relative;
+    right: 0px;
+    max-width: 90%;
     top: 50px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     color: #7e5304;
     font-size: 36px;
     text-align: right;
+    padding: 0;
 }
 
 .slider-container{
@@ -90,7 +101,7 @@
 
 .flex-container{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
 }
 
 #block-for-slider {
@@ -213,19 +224,22 @@
 }
 
 .squad-text-container{
-    position: absolute;
-    bottom: 15px;
+    position: relative;
+    height: 313px;
     margin: 0 auto;
     width: 283px;
     max-width: 100%;
-    height: 40%;
     word-wrap: break-word;
     text-align: center;
     padding: 0px 15px;
 }
 
+.h1-container{
+    width: 40%;
+}
+
 #h1-container-video{
-    padding: 50px;
+    padding: 50px 20px;
 }
 
 .squad-card-h1{
