--- a/main-720.css
+++ b/main-720.css
@@ -391,5 +391,339 @@
 }
 
 #block-for-slider{
-    margin-top: 0px;
+    margin-top: 0px;   
+    width: 100%;
+}
+
+.flex-container{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+}   
+
+.slider-container{
+    position: relative;
+    right: 10px;
+    width: auto;
+    
+}
+
+.h1-container{
+    width: 100%;
+}
+
+#about-main-h1{
+    position: relative;
+    left: 24px;
+    top: 120px;
+    max-width: 90%;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #F2994A;
+    font-size: 32px;
+}
+
+#about-main-h2{
+    position: relative;
+    left: 24px;
+    top: 150px;
+    max-width: 80%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #7e5304;
+    font-size: 18px;
+    text-align: justify;
+}
+
+.about-main-bg{
+    display: none;
+}
+
+.about-main{
+}
+
+#about-video-h1{
+    position: relative;
+    left: 24px;
+    font-size: 36px;
+    width: 90%;
+}
+
+#h1-container-video{
+    padding:0px;
+    padding-top: 35px;
+}
+
+.h1_right{
+    text-align: justify;
+}
+
+#about-main-h2-right{
+    width: 90%;
+    position: relative;
+    top: 10px;
+    left: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #7e5304;
+    font-size: 18px;
+    text-align: justify;
+}
+
+#slider_container_about{
+    left:50%;
+    transform: translateX(-50%);
+    margin-top: 55px;
+}
+
+.video-container{    
+    width: 90%;
+    height: 250px;
+    border-radius: 50px;
+    padding: 50px 10px 20px 10px;
+    top:50%;
+}
+
+.squad-flex-container{
+    position: relative;
+    top: 0px;
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    align-items: center;    
+}
+
+.squad-text-container{
+    position: relative;
+    top: 215px;
+    margin: 0 auto;
+    width: 283px;
+    max-width: 100%;
+    height: 40%;
+    word-wrap: break-word;
+    text-align: center;
+    padding: 0px 15px;
+}
+
+
+.zayavka_bg_usl{
+    position: relative;
+    left: 0px;
+    padding-left: 5px;
+    top: 90px;
+    background: none;
+    width: 90%;
+    height: auto;   
+    text-align: right;
+    padding: 15px;
+}
+
+.main_usligu_h1{
+    position: relative;
+    top: 00px;
+    left: 00px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: var(--main-orange);
+    width: 100%;
+    text-align: left;
+}
+
+.main_usligu_h2{
+    position: relative;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 26px;
+    color: #535353;
+    top: 00px;
+    margin-top: 28px;
+    width: 100%;
+}   
+
+.uslugi_list_1{
+    position: relative;
+    left: 5px;
+    top: 100px;
+    z-index: 4;
+}
+
+.uslugi_list_2{
+    position: absolute;
+    left: 5px;
+    top: 560px;
+    z-index: 4;
+}
+
+.uslugi_list_h3{
+    position: relative;
+    top: 0;
+    left: 8px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: rgb(49, 49, 49);
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.uslugi_flex{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: left;  /*НЕ РАБОТАЕТ СУКААААААА*/
+    margin-top: 20px;
+}
+
+.uslugi_card{
+    width: 156px;
+    height: 156px;
+    padding: 8px;
+    text-align: left;
+    margin-right: 5px;
+}
+
+.uslugi_card_p{
+    display: flex;
+    align-items: flex-end;
+    position: relative;
+    height: 146px;
+    padding-left: 10px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    word-wrap: break-word;
+}
+
+.main_uslugi{
+    width: 100%;
+    background-color: #fff;
+    min-height: 100vh;
+    max-height: 200vh;
+    background: url("img/uslugi/1.png") no-repeat left top;
+    background-size: cover;
+}
+
+
+
+
+#uslugi_gazel{
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #323233;
+}
+
+#gazel_h1{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 36px;
+    color: #cf8018;  /*color should be changed*/
+}
+
+#gazel_main{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    transform: none;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#gazel_main_img{
+    width: 80%;
+    height: auto;
+    border-radius: 0px;
+}
+
+#gazel_h2{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    color: #92d881;
+}
+
+#gazel_h3{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #92d881;
+}
+
+#gazel_h4{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+}
+
+
+#gazel_text_container{
+    text-align: center;
+}
+
+.circles_uslugi{
+    opacity: 10%;
+}
+
+/*CONTACTS BLOCK*/
+
+.adress_block{
+    display: none;
+    /* position: absolute;
+    background-color: #000000;
+    left: 0px;
+    top: 70px;
+    z-index: 5;
+    border-radius: 0px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    color: #fff;
+    padding: 10px 25px; */
+}
+
+.links_block{
+    position: absolute;
+    background-color: #ffffffb2;
+    margin-top:50px;
+    left: 0px;
+    bottom: 0px;
+    height: 100px;
+    width: 100%;
+    z-index: 5;
+    border-radius: 36px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 64px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.links_flex{
+    position: relative;
+    width: 100%;
+    height: 100px;
+    margin: 10px auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-content: center;
+}
+
+.links_flex > a > img, 
+.links_flex > img{
+    width: 100px;
+    height: 100px;
 }
