--- a/uslugi-1080.css
+++ b/uslugi-1080.css
@@ -49,6 +49,10 @@
     text-align: right;
 }
 
+#uslugi_mobile_fix{
+    display: none;
+}
+
 #gazel_h1{
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
